--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
    "devDependencies": {
       "@babel/core": "^7.12.16",
       "@babel/eslint-parser": "^7.12.16",
+      "@rushstack/eslint-patch": "^1.2.0",
       "@vue/cli-plugin-babel": "~5.0.0",
       "@vue/cli-plugin-eslint": "~5.0.0",
       "@vue/cli-service": "~5.0.0",
+      "@vue/eslint-config-prettier": "^7.1.0",
       "eslint": "^8.36.0",
       "eslint-config-prettier": "^8.7.0",
       "eslint-config-standard": "^17.0.0",
